templates/tpl_modified_nova/css/jquery.mmenulight.css
/*!
 * Mmenu Light
 * mmenujs.com/mmenu-light
 * Version 3.2.2
 * Copyright (c) Fred Heusschen
 * www.frebsite.nl
 *
 * License: CC-BY-4.0
 * http://creativecommons.org/licenses/by/4.0/
 */

#mobile_menu {
  display:block;
} 
 
#menu_closer {
  cursor:pointer;
  width:30px;
  height:30px;
  background: var(--toggle_menu_closer_bg, #eee);
  color: var(--toggle_menu_closer_color, #555);
  position:absolute;
  top:0px;
  right:0px;
  font-size:20px;
  line-height:30px;
  text-align:center;
  border-radius:4px;
}

body.mm-ocd-opened {
  overflow-y: hidden;
  -ms-scroll-chaining: none;
  overscroll-behavior: none;
}
.mm-ocd {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 100%;
  left: 0;
  z-index: 9999;
  overflow: hidden;
  -ms-scroll-chaining: none;
  overscroll-behavior: contain;
  background: rgba(0, 0, 0, 0);
  -webkit-transition-property: bottom, background-color;
  -o-transition-property: bottom, background-color;
  transition-property: bottom, background-color;
  -webkit-transition-duration: 0s, 0.3s;
  -o-transition-duration: 0s, 0.3s;
  transition-duration: 0s, 0.3s;
  -webkit-transition-timing-function: ease;
  -o-transition-timing-function: ease;
  transition-timing-function: ease;
  -webkit-transition-delay: 0.45s, 0.15s;
  -o-transition-delay: 0.45s, 0.15s;
  transition-delay: 0.45s, 0.15s;
}
.mm-ocd--open {
  bottom: 0;
  background: rgba(0, 0, 0, 0.3);
  -webkit-transition-delay: 0s;
  -o-transition-delay: 0s;
  transition-delay: 0s;
}
.mm-ocd__content {
  padding: 10px 20px;
  position: absolute;
  top: 0;
  bottom: 0;
  z-index: 2;
  width:100%;
  min-width:200px;
  max-width:440px;
  background:#fafafa;
  -webkit-transition-property: -webkit-transform;
  transition-property: -webkit-transform;
  -o-transition-property: transform;
  transition-property: transform;
  transition-property: transform, -webkit-transform;
  -webkit-transition-duration: 0.3s;
  -o-transition-duration: 0.3s;
  transition-duration: 0.3s;
  -webkit-transition-timing-function: ease;
  -o-transition-timing-function: ease;
  transition-timing-function: ease;
}
.mm-ocd--left .mm-ocd__content {
  left: 0;
  -webkit-transform: translate3d(-100%, 0, 0);
  transform: translate3d(-100%, 0, 0);
}
.mm-ocd--right .mm-ocd__content {
  right: 0;
  -webkit-transform: translate3d(100%, 0, 0);
  transform: translate3d(100%, 0, 0);
}
.mm-ocd--open .mm-ocd__content {
  -webkit-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
}
.mm-ocd__backdrop {
  position: absolute;
  top: 0;
  bottom: 0;
  z-index: 3;
  width:calc(100% - 80%);
  min-width:calc(100% - 440px);
  max-width:calc(100% - 200px);
  background: rgba(3, 2, 1, 0);
}
.mm-ocd--left .mm-ocd__backdrop {
  right: 0;
}
.mm-ocd--right .mm-ocd__backdrop {
  left: 0;
}
.mm-spn,
.mm-spn a,
.mm-spn li,
.mm-spn span,
.mm-spn ul {
  display: block;
  padding: 0;
  margin: 0;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}
.mm-spn li .fa-solid,
.mm-spn li .fa-regular {
  margin: 0 8px 0 0;
}
.mm-spn {
  width: 100%;
  height: 100%;
  -webkit-tap-highlight-color: transparent;
  -webkit-overflow-scrolling: touch;
  overflow: hidden;
  -webkit-clip-path: inset(0 0 0 0);
  clip-path: inset(0 0 0 0);
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
}
.mm-spn ul {
  -webkit-overflow-scrolling: touch;
  position: fixed;
  top: 0;
  left: 100%;
  bottom: 0;
  z-index: 2;
  width:130%;
  padding-right:30%;
  line-height:18px;
  overflow: visible;
  overflow-y: auto;
  background: inherit;
  -webkit-transition: left 0.3s ease 0s;
  -o-transition: left 0.3s ease 0s;
  transition: left 0.3s ease 0s;
  cursor: default;
}
.mm-spn ul:after {
  content:'';
  display: block;
  height:50px;
}
.mm-spn > ul {
  left: 0;
}
.mm-spn ul.mm-spn--open {
  left: 0;
}
.mm-spn ul.mm-spn--parent {
  left:-30%;
  overflow: visible;
}
.mm-spn li {
  position: relative;
  background: inherit;
  cursor: pointer;
}
.mm-spn li:before {
  content:'';
  display: block;
  position: absolute;
  top:20px;
  right:15px;
  z-index: 0;
  width: 10px;
  height: 10px;
  border-top: 2px solid;
  border-right: 2px solid;
  -webkit-transform: rotate(45deg) translate(0, -50%);
  -ms-transform: rotate(45deg) translate(0, -50%);
  transform: rotate(45deg) translate(0, -50%);
  opacity:0.6;
}
.mm-spn li:after {
  content:'';
  display: block;
  margin-left:0px;
  border-top: 1px solid #d9d9d9;
}
.mm-spn a,
.mm-spn span {
  position: relative;
  z-index: 1;
  padding:12px 15px 12px 2px;
}
.mm-spn a {
  background: inherit;
  color: inherit;
  text-decoration: none;
}
.mm-spn a:not(:last-child) {
  pointer-events: none !important;
  width:calc(100% - 30px);
}
.mm-spn a:not(:last-child):after {
  content:'';
  display: block;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  border-right:0px solid;
  opacity: 0.15;
}
.mm-spn span {
  background: 0 0;
}
.mm-spn.mm-spn--navbar {
  cursor: pointer;
}
.mm-spn.mm-spn--navbar:before {
  content:'';
  display: block;
  position: absolute;
  top:60px;
  left:20px;
  width: 10px;
  height: 10px;
  margin-top: 2px;
  border-top: 2px solid;
  border-left: 2px solid;
  -webkit-transform: rotate(-45deg) translate(50%, -50%);
  -ms-transform: rotate(-45deg) translate(50%, -50%);
  transform: rotate(-45deg) translate(50%, -50%);
  opacity:0.8;
  z-index:2;
}
.mm-spn.mm-spn--navbar.mm-spn--main {
  cursor: default;
}
.mm-spn.mm-spn--navbar.mm-spn--main:before {
  content: none;
  display: none;
}
.mm-spn.mm-spn--navbar:after {
  content: attr(data-mm-spn-title);
  display: block;
  position: absolute;
  top:40px;
  left: 0;
  right: 0;
  height:40px;
  padding:0 40px;
  line-height:40px;
  opacity:1.0;
  text-align: center;
  overflow: hidden;
  white-space: nowrap;
  -o-text-overflow: ellipsis;
  text-overflow: ellipsis;
  font-weight:700;
  text-transform:uppercase;
  background:#eee;
  z-index:1;
  font-size:12px;
  border-radius:4px;
}
.mm-spn.mm-spn--navbar.mm-spn--main:after {
  padding-left:20px;
}
.mm-spn.mm-spn--navbar ul {
  top:90px;
}
.mm-spn.mm-spn--navbar ul:before {
  content:'';
  display: block;
  position: fixed;
  top: inherit;
  z-index: 2;
  width: 100%;
  border-top: 1px solid #d9d9d9;
}
.mm-spn.mm-spn--light {
  color: #444;
  background:#fafafa;
  font-weight:400;
}
.mm-spn.mm-spn--dark {
  color: #ddd;
  background: #333;
  font-weight:400;
}
.mm-spn.mm-spn--vertical {
  overflow-y: auto;
}
.mm-spn.mm-spn--vertical ul {
  width: 100%;
  padding-right: 0;
  position: static;
}
.mm-spn.mm-spn--vertical ul ul {
  display: none;
  padding-left:20px;
}
.mm-spn.mm-spn--vertical ul ul:after {
  height:25px;
}
.mm-spn.mm-spn--vertical ul.mm-spn--open {
  display: block;
}
.mm-spn.mm-spn--vertical li.mm-spn--open:before {
  -webkit-transform: rotate(135deg) translate(-50%, 0);
  -ms-transform: rotate(135deg) translate(-50%, 0);
  transform: rotate(135deg) translate(-50%, 0);
}
.mm-spn.mm-spn--vertical ul ul li:last-child:after {
  content: none;
  display: none;
}

.mm-spn--open .active1 > a,
.mm-spn--open .activeparent1 > a {
  color: var(--mobilemenu_color_selected, #222);
  font-weight:700 !important;
}
.mm-spn--open .active2 > a,
.mm-spn--open .activeparent2 > a {
  color: var(--mobilemenu_color_selected, #222);
  font-weight:700 !important;
}
.mm-spn--open .active3 > a,
.mm-spn--open .activeparent3 > a {
  color: var(--mobilemenu_color_selected, #222);
  font-weight:700 !important;
}
.mm-spn--open .active4 > a,
.mm-spn--open .activeparent4 > a {
  color: var(--mobilemenu_color_selected, #222);
  font-weight:700 !important;
}
.mm-spn--open .active5 > a,
.mm-spn--open .activeparent5 > a {
  color: var(--mobilemenu_color_selected, #222);
  font-weight:700 !important;
}
.mm-spn--open li.level_manu > a > strong {
  color: var(--mobilemenu_color_selected, #222);
  font-weight:700 !important;
} 
.admin_mode .mm-ocd {
  top:36px !important;
}

.mm-ocd .level1 > a,
.mm-ocd .level1 > span.nolink {
  text-transform:uppercase;
  font-weight:700;
  font-size:12px;
}

.mm-ocd span.counts {
  display: inline;
  padding: 0 0 0 5px;
  font-size: 12px;
  line-height: 12px;
  font-weight:400;
}
.mm-ocd .sub_cats_arrow {
  display:none;
}
.mm-ocd .overview {
  font-weight: 700;
  font-size: 12px;
  line-height:16px;
  text-transform: uppercase;
}

